@@ -91,6 +91,21 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|CommonParams
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|schema
 operator|.
 name|IndexSchema
@@ -277,6 +292,119 @@ literal|"0%"
 argument_list|)
 return|;
 block|}
+comment|/**    * Uses {@link SolrPluginUtils#parseFieldBoosts(String)} with the 'qf' parameter. Falls back to the 'df' parameter    * or {@link org.apache.solr.schema.IndexSchema#getDefaultSearchFieldName()}.    */
+DECL|method|parseQueryFields
+specifier|public
+specifier|static
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Float
+argument_list|>
+name|parseQueryFields
+parameter_list|(
+specifier|final
+name|IndexSchema
+name|indexSchema
+parameter_list|,
+specifier|final
+name|SolrParams
+name|solrParams
+parameter_list|)
+throws|throws
+name|ParseException
+block|{
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Float
+argument_list|>
+name|queryFields
+init|=
+name|SolrPluginUtils
+operator|.
+name|parseFieldBoosts
+argument_list|(
+name|solrParams
+operator|.
+name|getParams
+argument_list|(
+name|DisMaxParams
+operator|.
+name|QF
+argument_list|)
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|queryFields
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|String
+name|df
+init|=
+name|QueryParsing
+operator|.
+name|getDefaultField
+argument_list|(
+name|indexSchema
+argument_list|,
+name|solrParams
+operator|.
+name|get
+argument_list|(
+name|CommonParams
+operator|.
+name|DF
+argument_list|)
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|df
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|ParseException
+argument_list|(
+literal|"Neither "
+operator|+
+name|DisMaxParams
+operator|.
+name|QF
+operator|+
+literal|", "
+operator|+
+name|CommonParams
+operator|.
+name|DF
+operator|+
+literal|", nor the default search field are present."
+argument_list|)
+throw|;
+block|}
+name|queryFields
+operator|.
+name|put
+argument_list|(
+name|df
+argument_list|,
+literal|1.0f
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|queryFields
+return|;
+block|}
 DECL|method|DisMaxQParser
 specifier|public
 name|DisMaxQParser
@@ -369,46 +497,16 @@ argument_list|)
 decl_stmt|;
 name|queryFields
 operator|=
-name|SolrPluginUtils
-operator|.
-name|parseFieldBoosts
-argument_list|(
-name|solrParams
-operator|.
-name|getParams
-argument_list|(
-name|DisMaxParams
-operator|.
-name|QF
-argument_list|)
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-literal|0
-operator|==
-name|queryFields
-operator|.
-name|size
-argument_list|()
-condition|)
-block|{
-name|queryFields
-operator|.
-name|put
+name|parseQueryFields
 argument_list|(
 name|req
 operator|.
 name|getSchema
 argument_list|()
-operator|.
-name|getDefaultSearchFieldName
-argument_list|()
 argument_list|,
-literal|1.0f
+name|solrParams
 argument_list|)
 expr_stmt|;
-block|}
 comment|/* the main query we will execute.  we disable the coord because      * this query is an artificial construct      */
 name|BooleanQuery
 name|query
