@@ -632,46 +632,18 @@ argument_list|)
 expr_stmt|;
 name|queryFields
 operator|=
-name|SolrPluginUtils
+name|DisMaxQParser
 operator|.
-name|parseFieldBoosts
-argument_list|(
-name|solrParams
-operator|.
-name|getParams
-argument_list|(
-name|DisMaxParams
-operator|.
-name|QF
-argument_list|)
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-literal|0
-operator|==
-name|queryFields
-operator|.
-name|size
-argument_list|()
-condition|)
-block|{
-name|queryFields
-operator|.
-name|put
+name|parseQueryFields
 argument_list|(
 name|req
 operator|.
 name|getSchema
 argument_list|()
-operator|.
-name|getDefaultSearchFieldName
-argument_list|()
 argument_list|,
-literal|1.0f
+name|solrParams
 argument_list|)
 expr_stmt|;
-block|}
 comment|// Boosted phrase of the full query string
 name|List
 argument_list|<
