@@ -322,32 +322,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|core
-operator|.
-name|SolrCore
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|request
-operator|.
-name|LocalSolrQueryRequest
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
 name|request
 operator|.
 name|SolrQueryRequest
@@ -542,7 +516,7 @@ name|VAL_EXPLICIT
 init|=
 literal|"__VAL_EXPLICIT__"
 decl_stmt|;
-comment|/**    * Returns the "prefered" default operator for use by Query Parsers,     * based on the settings in the IndexSchema which may be overridden using     * an optional String override value.    *    * @see IndexSchema#getQueryParserDefaultOperator()    * @see #OP    */
+comment|/**    * Returns the "preferred" default operator for use by Query Parsers,    * based on the settings in the IndexSchema which may be overridden using     * an optional String override value.    *    * @see IndexSchema#getQueryParserDefaultOperator()    * @see #OP    */
 DECL|method|getQueryParserDefaultOperator
 specifier|public
 specifier|static
@@ -597,6 +571,35 @@ operator|.
 name|Operator
 operator|.
 name|OR
+return|;
+block|}
+comment|/**    * Returns the effective default field based on the 'df' param or    * hardcoded schema default.  May be null if either exists specified.    * @see org.apache.solr.common.params.CommonParams#DF    * @see org.apache.solr.schema.IndexSchema#getDefaultSearchFieldName    */
+DECL|method|getDefaultField
+specifier|public
+specifier|static
+name|String
+name|getDefaultField
+parameter_list|(
+specifier|final
+name|IndexSchema
+name|s
+parameter_list|,
+specifier|final
+name|String
+name|df
+parameter_list|)
+block|{
+return|return
+name|df
+operator|!=
+literal|null
+condition|?
+name|df
+else|:
+name|s
+operator|.
+name|getDefaultSearchFieldName
+argument_list|()
 return|;
 block|}
 comment|// note to self: something needs to detect infinite recursion when parsing queries
