@@ -478,35 +478,6 @@ throw|;
 block|}
 comment|// so what do we do with the SrndQuery ??
 comment|// processing based on example in LIA Ch 9
-name|String
-name|defaultField
-init|=
-name|getParam
-argument_list|(
-name|CommonParams
-operator|.
-name|DF
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|defaultField
-operator|==
-literal|null
-condition|)
-block|{
-name|defaultField
-operator|=
-name|getReq
-argument_list|()
-operator|.
-name|getSchema
-argument_list|()
-operator|.
-name|getDefaultSearchFieldName
-argument_list|()
-expr_stmt|;
-block|}
 name|BasicQueryFactory
 name|bqFactory
 init|=
@@ -516,6 +487,27 @@ argument_list|(
 name|this
 operator|.
 name|maxBasicQueries
+argument_list|)
+decl_stmt|;
+name|String
+name|defaultField
+init|=
+name|QueryParsing
+operator|.
+name|getDefaultField
+argument_list|(
+name|getReq
+argument_list|()
+operator|.
+name|getSchema
+argument_list|()
+argument_list|,
+name|getParam
+argument_list|(
+name|CommonParams
+operator|.
+name|DF
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|Query
